update | start game