@@ -1,21 +1,17 @@
 package com.brettspiel.boardgameguide.splendor.service.impl;
 
-import cn.hutool.core.util.StrUtil;
 import com.brettspiel.assist.SocketAssist;
 import com.brettspiel.boardgameguide.constant.ServiceConstants;
 import com.brettspiel.boardgameguide.splendor.constant.GameConstants;
 import com.brettspiel.boardgameguide.splendor.controller.dto.request.*;
+import com.brettspiel.boardgameguide.splendor.dto.PlayerDTO;
 import com.brettspiel.boardgameguide.splendor.dto.SplendorGameDTO;
 import com.brettspiel.boardgameguide.splendor.entity.SplendorGame;
-import com.brettspiel.boardgameguide.splendor.entity.SplendorTable;
 import com.brettspiel.boardgameguide.splendor.entity.vo.*;
-import com.brettspiel.boardgameguide.splendor.mapper.IGameMapper;
+import com.brettspiel.boardgameguide.splendor.mapper.GameMapper;
 import com.brettspiel.boardgameguide.splendor.repository.ISplendorGameRepository;
-import com.brettspiel.boardgameguide.splendor.repository.ISplendorTableRepository;
 import com.brettspiel.boardgameguide.splendor.service.IGameService;
-import com.brettspiel.boardgameguide.splendor.utils.GameUtils;
-import com.brettspiel.boardgameguide.splendor.vo.config.SplendorGameConfig;
-import com.brettspiel.utils.IdGenerator;
+import com.brettspiel.boardgameguide.splendor.usecase.SplendorStandardUsecase;
 import com.brettspiel.utils.R;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -23,7 +19,6 @@ import org.springframework.stereotype.Service;
 
 import java.util.*;
 import java.util.stream.Collectors;
-import java.util.stream.IntStream;
 
 /**
  * Created by Quach Thanh Phong
@@ -34,156 +29,15 @@ import java.util.stream.IntStream;
 @RequiredArgsConstructor
 public class GameServiceImpl implements IGameService {
 
-    private final ISplendorTableRepository splendorTableRepository;
-
     private final ISplendorGameRepository splendorGameRepository;
 
-    private final IGameMapper gameMapper;
+    private final SplendorStandardUsecase splendorStandardUsecase;
+
+    private final GameMapper gameMapper;
 
     private final SocketAssist socketAssist;
 
-    private final GameUtils gameUtils;
 
-
-
-
-    @Override
-    public R<SplendorGameDTO> initGame(String userId, InitGameRequest body) {
-        // Get from db
-        SplendorTable splendorTable = splendorTableRepository.getByIdAndHost(body.getTableId(), userId);
-        if (splendorTable == null) {
-            return R.failed("Table not found");
-        }
-        if (!Objects.equals(splendorTable.getHostId(), userId)) {
-            log.error("initGame - You is not host - {} {} | {}", body.getTableId(), userId, splendorTable.getHostId());
-            return R.failed("You is not host");
-        }
-
-        //Shuffle player (Clone list)
-        List<String> playerIds = new ArrayList<>(splendorTable.getUserIds());
-        Collections.shuffle(playerIds);
-
-        // Get card data from config
-        int numberPlayer = splendorTable.getUserIds().size();
-        SplendorGameConfig splendorGameConfig = gameUtils.getGameConfig(numberPlayer);
-        if (splendorGameConfig == null) {
-            log.error("initGame - Config splendor not found - {} | {}", numberPlayer, gameUtils.getListGameConfig());
-            return R.failed(StrUtil.format("Can't init game with {} player", numberPlayer));
-        }
-        List<Card> cardsIngame =  splendorGameConfig.getCards().stream()
-                .map(cardConfig -> Card.builder()
-                        .id(cardConfig.getId())
-                        .type(cardConfig.getType())
-                        .level(cardConfig.getLevel())
-                        .score(cardConfig.getScore())
-                        .cost(CardCost.builder()
-                                .onyx(cardConfig.getCost().getOnyx())
-                                .ruby(cardConfig.getCost().getRuby())
-                                .emerald(cardConfig.getCost().getEmerald())
-                                .sapphire(cardConfig.getCost().getSapphire())
-                                .diamond(cardConfig.getCost().getDiamond())
-                                .build())
-                        .build())
-                .toList();
-        List<Noble> noblesIngame = splendorGameConfig.getNobles().stream()
-                .map(nobleConfig -> Noble.builder()
-                        .id(nobleConfig.getId())
-                        .score(nobleConfig.getScore())
-                        .cost(NobleCost.builder()
-                                .card0nyx(nobleConfig.getCost().getCardOnyx())
-                                .cardRuby(nobleConfig.getCost().getCardRuby())
-                                .cardEmerald(nobleConfig.getCost().getCardEmerald())
-                                .cardSapphire(nobleConfig.getCost().getCardSapphire())
-                                .cardDiamond(nobleConfig.getCost().getCardDiamond())
-                                .build())
-                        .build())
-                .toList();
-
-        // Init data ingame
-        int openCard = 4;
-        IngameData ingameData = IngameData.builder()
-                .numberPlayer(splendorTable.getUserIds().size())
-                .playerIds(playerIds)
-                .endgameScore(splendorGameConfig.getEndgameScore())
-                .currentPlayer(playerIds.get(0))
-                .nextPlayer(playerIds.get(1))
-                .deckNoble(noblesIngame)
-                .fieldNoble(IntStream.range(0, splendorGameConfig.getNoble())
-                        .mapToObj(index -> FieldNoble.builder()
-                                .position(index)
-                                .build())
-                        .toList())
-                .deckCard1(cardsIngame.stream()
-                        .filter(card -> card.getLevel() == 1)
-                        .toList())
-                .fieldCard1(IntStream.range(0, openCard)
-                        .mapToObj(index -> FieldCard.builder()
-                                .position(index)
-                                .build())
-                        .toList())
-                .deckCard2(cardsIngame.stream()
-                        .filter(card -> card.getLevel() == 2)
-                        .toList())
-                .fieldCard2(IntStream.range(0, openCard)
-                        .mapToObj(index -> FieldCard.builder()
-                                .position(index)
-                                .build())
-                        .toList())
-                .deckCard3(cardsIngame.stream()
-                        .filter(card -> card.getLevel() == 3)
-                        .toList())
-                .fieldCard3(IntStream.range(0, openCard)
-                        .mapToObj(index -> FieldCard.builder()
-                                .position(index)
-                                .build())
-                        .toList())
-                .gold(splendorGameConfig.getGold())
-                .onyx(splendorGameConfig.getOnyx())
-                .ruby(splendorGameConfig.getRuby())
-                .emerald(splendorGameConfig.getEmerald())
-                .sapphire(splendorGameConfig.getSapphire())
-                .diamond(splendorGameConfig.getDiamond())
-                .players(playerIds.stream()
-                        .map(playerId -> IngamePlayerData.builder()
-                                .playerId(playerId)
-                                .build())
-                        .toList())
-                .build();
-
-        // Update status
-        splendorTable = splendorTableRepository.initGame(body.getTableId());
-        if (splendorTable == null) {
-            return R.failed("Table are playing");
-        }
-
-        // Save game to db
-        SplendorGame splendorGame = SplendorGame.builder()
-                .gameId(IdGenerator.nextObjectId())
-                .tableId(splendorTable.getTableId())
-                .playerIds(splendorTable.getUserIds())
-                .status(GameConstants.STATUS_INIT)
-                .cards(cardsIngame)
-                .nobles(noblesIngame)
-                .ingameData(ingameData)
-                .build();
-        splendorGame = splendorGameRepository.insert(splendorGame);
-
-        // Notify to all user in table
-        SplendorTable finalSplendorTable = splendorTable;
-        SplendorGame finalSplendorGame = splendorGame;
-        socketAssist.broadcastMessageToRoom(splendorTable.getTableId(), new HashMap<>() {
-            {
-                put("service_type", ServiceConstants.SERVICE_GAME_SPLENDOR);
-                put("event_type", GameConstants.EVENT_INIT_GAME);
-                put("game_id", finalSplendorGame.getGameId());
-                put("table_id", finalSplendorTable.getTableId());
-                put("player_ids", finalSplendorGame.getPlayerIds());
-
-            }
-        });
-
-        return R.ok(gameMapper.toSplendorGameDTO(splendorGame));
-    }
 
     @Override
     public R<SplendorGameDTO> getGameInfo(String userId, String gameId) {
@@ -193,6 +47,46 @@ public class GameServiceImpl implements IGameService {
         }
 
         return R.ok(gameMapper.toSplendorGameDTO(splendorGame));
+    }
+
+    @Override
+    public void initGame(Map<String, Object> data) {
+        log.info("GameService - initGame - {}", data);
+
+        // Data
+        String roomId = (String) data.get("room_id");
+        String gameId = (String) data.get("game_id");
+        List<Map<String, Object>> players = (List<Map<String, Object>>) data.get("players");
+        Map<String, Object> setup = (Map<String, Object>) data.get("setup");
+        List<PlayerDTO> playerDTOS = players.stream()
+                .map(gameMapper::toPlayerDTO)
+                .toList();
+
+        // Init game
+        String gameType = setup.get("type") == null ? "base" : setup.get("type").toString();
+        SplendorGame splendorGame;
+        switch (gameType) {
+            case GameConstants.GAME_TYPE_BASE:
+                splendorGame = splendorStandardUsecase.initGame(roomId, playerDTOS, setup);
+                break;
+            case GameConstants.GAME_TYPE_EXTENSION:
+                // todo: handle extension
+                splendorGame = splendorStandardUsecase.initGame(roomId, playerDTOS, setup);
+                break;
+            default:
+                splendorGame = splendorStandardUsecase.initGame(roomId, playerDTOS, setup);
+                break;
+        }
+
+        // Update status
+
+        // Notify to all user in room
+        socketAssist.broadcastMessageToRoom(roomId, "game", new HashMap<>() {
+            {
+                put("id", splendorGame.getGameId());
+                put("game_id", gameId);
+            }
+        });
     }
 
     @Override
@@ -213,61 +107,7 @@ public class GameServiceImpl implements IGameService {
                 return R.failed("Game have ended");
         }
 
-        // Shuffle and open deck
-        // Noble
-        int sizeFieldNoble = splendorGame.getIngameData().getFieldNoble().size();
-        List<Noble> deckNoble = splendorGame.getIngameData().getDeckNoble();
-        Collections.shuffle(deckNoble);
-        List<Noble> fieldNoble = deckNoble.stream().limit(sizeFieldNoble).toList();
-        deckNoble = deckNoble.stream().skip(sizeFieldNoble).toList();
-        // Card 1
-        int sizeFieldCard1 = splendorGame.getIngameData().getFieldCard1().size();
-        List<Card> deckCard1 = splendorGame.getIngameData().getDeckCard1();
-        Collections.shuffle(deckCard1);
-        List<Card> fieldCard1 = deckCard1.stream().limit(sizeFieldCard1).toList();
-        deckCard1 = deckCard1.stream().skip(sizeFieldCard1).toList();
-        // Card 2
-        int sizeFieldCard2 = splendorGame.getIngameData().getFieldCard2().size();
-        List<Card> deckCard2 = splendorGame.getIngameData().getDeckCard2();
-        Collections.shuffle(deckCard2);
-        List<Card> fieldCard2 = deckCard2.stream().limit(sizeFieldCard2).toList();
-        deckCard2 = deckCard2.stream().skip(sizeFieldCard2).toList();
-        // Card 3
-        int sizeFieldCard3 = splendorGame.getIngameData().getFieldCard3().size();
-        List<Card> deckCard3 = splendorGame.getIngameData().getDeckCard3();
-        Collections.shuffle(deckCard3);
-        List<Card> fieldCard3 = deckCard3.stream().limit(sizeFieldCard3).toList();
-        deckCard3 = deckCard3.stream().skip(sizeFieldCard3).toList();
-
-        // Save to db
-        splendorGame = splendorGameRepository.startGame(gameId, deckNoble, fieldNoble, deckCard1, deckCard2, deckCard3, fieldCard1, fieldCard2, fieldCard3);
-        if (splendorGame == null) {
-            log.error("startGame - Game have started - {} {}", gameId, userId);
-            return R.failed("Game have started");
-        }
-
-        // Notify to all user in game
-        SplendorGame finalSplendorGame = splendorGame;
-        socketAssist.broadcastMessageToRoom(splendorGame.getGameId(), new HashMap<>() {
-            {
-                put("service_type", ServiceConstants.SERVICE_GAME_SPLENDOR);
-                put("event_type", GameConstants.EVENT_START_GAME);
-                put("game_id", finalSplendorGame.getGameId());
-                put("table_id", finalSplendorGame.getTableId());
-                put("player_ids", finalSplendorGame.getPlayerIds());
-                put("status", finalSplendorGame.getStatus());
-                put("round", finalSplendorGame.getIngameData().getRound());
-                put("turn", finalSplendorGame.getIngameData().getTurn());
-                put("current_player", finalSplendorGame.getIngameData().getCurrentPlayer());
-                put("next_player", finalSplendorGame.getIngameData().getNextPlayer());
-                put("field_noble", finalSplendorGame.getIngameData().getFieldNoble());
-                put("field_card_1", finalSplendorGame.getIngameData().getFieldCard1());
-                put("field_card_2", finalSplendorGame.getIngameData().getFieldCard2());
-                put("field_card_3", finalSplendorGame.getIngameData().getFieldCard3());
-            }
-        });
-
-        return R.ok();
+        return splendorStandardUsecase.startGame(splendorGame);
     }
 
     @Override
@@ -293,7 +133,7 @@ public class GameServiceImpl implements IGameService {
         if (!splendorGame.getIngameData().getDeckCard1().isEmpty() &&
                 splendorGame.getIngameData().getFieldCard1().stream()
                         .anyMatch(fieldCard -> fieldCard.getCard() == null)) {
-            cardIdDeck1 = splendorGame.getIngameData().getDeckCard1().get(0).getId();
+            cardIdDeck1 = splendorGame.getIngameData().getDeckCard1().getFirst().getId();
             splendorGame = splendorGameRepository.fillFieldLevel1(gameId, userId, cardIdDeck1);
             if (splendorGame == null) {
                 log.error("startTurn - Fill field card 1 error - {} {}", gameId, userId);
@@ -304,7 +144,7 @@ public class GameServiceImpl implements IGameService {
         if (!splendorGame.getIngameData().getDeckCard2().isEmpty() &&
                 splendorGame.getIngameData().getFieldCard2().stream()
                         .anyMatch(fieldCard -> fieldCard.getCard() == null)) {
-            cardIdDeck2 = splendorGame.getIngameData().getDeckCard2().get(0).getId();
+            cardIdDeck2 = splendorGame.getIngameData().getDeckCard2().getFirst().getId();
             splendorGame = splendorGameRepository.fillFieldLevel2(gameId, userId, cardIdDeck2);
             if (splendorGame == null) {
                 log.error("startTurn - Fill field card 2 error - {} {}", gameId, userId);
@@ -315,7 +155,7 @@ public class GameServiceImpl implements IGameService {
         if (!splendorGame.getIngameData().getDeckCard3().isEmpty() &&
                 splendorGame.getIngameData().getFieldCard3().stream()
                         .anyMatch(fieldCard -> fieldCard.getCard() == null)) {
-            cardIdDeck3 = splendorGame.getIngameData().getDeckCard3().get(0).getId();
+            cardIdDeck3 = splendorGame.getIngameData().getDeckCard3().getFirst().getId();
             splendorGame = splendorGameRepository.fillFieldLevel3(gameId, userId, cardIdDeck3);
             if (splendorGame == null) {
                 log.error("startTurn - Fill field card 3 error - {} {}", gameId, userId);
@@ -328,13 +168,13 @@ public class GameServiceImpl implements IGameService {
         List<String> fieldCard1 = cardIdDeck1 == null ? new ArrayList<>() : List.of(cardIdDeck1);
         List<String> fieldCard2 = cardIdDeck2 == null ? new ArrayList<>() : List.of(cardIdDeck2);
         List<String> fieldCard3 = cardIdDeck3 == null ? new ArrayList<>() : List.of(cardIdDeck3);
-        socketAssist.broadcastMessageToRoom(splendorGame.getGameId(), new HashMap<>() {
+        socketAssist.broadcastMessageToRoom(splendorGame.getGameId(), "", new HashMap<>() {
             {
                 put("service_type", ServiceConstants.SERVICE_GAME_SPLENDOR);
                 put("event_type", GameConstants.EVENT_START_TURN);
                 put("game_id", finalSplendorGame.getGameId());
-                put("table_id", finalSplendorGame.getTableId());
-                put("player_ids", finalSplendorGame.getPlayerIds());
+                put("room_id", finalSplendorGame.getRoomId());
+                put("players", finalSplendorGame.getPlayers());
                 put("round", finalSplendorGame.getIngameData().getRound());
                 put("turn", finalSplendorGame.getIngameData().getTurn());
                 put("current_player", finalSplendorGame.getIngameData().getCurrentPlayer());
@@ -374,12 +214,12 @@ public class GameServiceImpl implements IGameService {
 
         // Notify all user in game
         SplendorGame finalSplendorGame = splendorGame;
-        socketAssist.broadcastMessageToRoom(splendorGame.getGameId(), new HashMap<>() {
+        socketAssist.broadcastMessageToRoom(splendorGame.getGameId(), "", new HashMap<>() {
             {
                 put("service_type", ServiceConstants.SERVICE_GAME_SPLENDOR);
                 put("event_type", GameConstants.EVENT_END_TURN);
                 put("game_id", finalSplendorGame.getGameId());
-                put("table_id", finalSplendorGame.getTableId());
+                put("room_id", finalSplendorGame.getRoomId());
                 put("player_id", userId);
                 put("round", finalSplendorGame.getIngameData().getRound());
                 put("turn", finalSplendorGame.getIngameData().getTurn());
@@ -461,12 +301,12 @@ public class GameServiceImpl implements IGameService {
 
         // Notify all user in game
         SplendorGame finalSplendorGame = splendorGame;
-        socketAssist.broadcastMessageToRoom(splendorGame.getGameId(), new HashMap<>() {
+        socketAssist.broadcastMessageToRoom(splendorGame.getGameId(), "", new HashMap<>() {
             {
                 put("service_type", ServiceConstants.SERVICE_GAME_SPLENDOR);
                 put("event_type", GameConstants.EVENT_TURN_ACTION_GATHER_GEM);
                 put("game_id", finalSplendorGame.getGameId());
-                put("table_id", finalSplendorGame.getTableId());
+                put("room_id", finalSplendorGame.getRoomId());
                 put("player_id", userId);
                 put("round", finalSplendorGame.getIngameData().getRound());
                 put("turn", finalSplendorGame.getIngameData().getTurn());
@@ -532,7 +372,7 @@ public class GameServiceImpl implements IGameService {
         }
 
         // Get config in game
-        Card cardData = splendorGame.getCards().stream()
+        Card cardData = splendorGame.getConfig().getCards().stream()
                 .filter(card -> Objects.equals(card.getId(), body.getCardId()))
                 .findFirst()
                 .orElse(null);
@@ -596,12 +436,12 @@ public class GameServiceImpl implements IGameService {
 
         // Notify all user in game
         SplendorGame finalSplendorGame = splendorGame;
-        socketAssist.broadcastMessageToRoom(splendorGame.getGameId(), new HashMap<>() {
+        socketAssist.broadcastMessageToRoom(splendorGame.getGameId(), "", new HashMap<>() {
             {
                 put("service_type", ServiceConstants.SERVICE_GAME_SPLENDOR);
                 put("event_type", GameConstants.EVENT_TURN_ACTION_BUY_CARD);
                 put("game_id", finalSplendorGame.getGameId());
-                put("table_id", finalSplendorGame.getTableId());
+                put("room_id", finalSplendorGame.getRoomId());
                 put("player_id", userId);
                 put("round", finalSplendorGame.getIngameData().getRound());
                 put("turn", finalSplendorGame.getIngameData().getTurn());
@@ -666,7 +506,7 @@ public class GameServiceImpl implements IGameService {
         }
 
         // Get config in game
-        Card cardData = splendorGame.getCards().stream()
+        Card cardData = splendorGame.getConfig().getCards().stream()
                 .filter(card -> Objects.equals(card.getId(), body.getCardId()))
                 .findFirst()
                 .orElse(null);
@@ -773,12 +613,12 @@ public class GameServiceImpl implements IGameService {
         List<String> fieldCard1 = cardIdField1 == null ? new ArrayList<>() : List.of(cardIdField1);
         List<String> fieldCard2 = cardIdField2 == null ? new ArrayList<>() : List.of(cardIdField2);
         List<String> fieldCard3 = cardIdField3 == null ? new ArrayList<>() : List.of(cardIdField3);
-        socketAssist.broadcastMessageToRoom(splendorGame.getGameId(), new HashMap<>() {
+        socketAssist.broadcastMessageToRoom(splendorGame.getGameId(), "", new HashMap<>() {
             {
                 put("service_type", ServiceConstants.SERVICE_GAME_SPLENDOR);
                 put("event_type", GameConstants.EVENT_TURN_ACTION_RESERVE_CARD);
                 put("game_id", finalSplendorGame.getGameId());
-                put("table_id", finalSplendorGame.getTableId());
+                put("room_id", finalSplendorGame.getRoomId());
                 put("player_id", userId);
                 put("round", finalSplendorGame.getIngameData().getRound());
                 put("turn", finalSplendorGame.getIngameData().getTurn());
@@ -816,7 +656,7 @@ public class GameServiceImpl implements IGameService {
         }
 
         // Get config in game
-        Noble nobleData = splendorGame.getNobles().stream()
+        Noble nobleData = splendorGame.getConfig().getNobles().stream()
                 .filter(noble -> Objects.equals(noble.getId(), body.getNobleId()))
                 .findFirst()
                 .orElse(null);
@@ -860,12 +700,12 @@ public class GameServiceImpl implements IGameService {
 
         // Notify all user in game
         SplendorGame finalSplendorGame = splendorGame;
-        socketAssist.broadcastMessageToRoom(splendorGame.getGameId(), new HashMap<>() {
+        socketAssist.broadcastMessageToRoom(splendorGame.getGameId(), "", new HashMap<>() {
             {
                 put("service_type", ServiceConstants.SERVICE_GAME_SPLENDOR);
                 put("event_type", GameConstants.EVENT_TURN_BONUS_ACTION_TAKE_NOBLE);
                 put("game_id", finalSplendorGame.getGameId());
-                put("table_id", finalSplendorGame.getTableId());
+                put("room_id", finalSplendorGame.getRoomId());
                 put("player_id", userId);
                 put("round", finalSplendorGame.getIngameData().getRound());
                 put("turn", finalSplendorGame.getIngameData().getTurn());
